--- a/PracticeAppWeb/Views/Category/Delete.cshtml
+++ b/PracticeAppWeb/Views/Category/Delete.cshtml
@@ -1,34 +1,31 @@
 ﻿@model Category
 
-<form method="post">
+<form method="post" asp-action="DeletePOST">
+	<input asp-for="Id" hidden />
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
-			<h2 class="text-primary">Create category</h2>
+			<h2 class="text-primary">Delete category</h2>
 			<hr />
 		</div>
 		@*<div asp-validation-summary="All"></div>*@
 		<div class="mb-3">
 			<label asp-for="Name"></label>
-			<input asp-for="Name" class="form-control"/>
+			<input asp-for="Name" class="form-control" disabled/>
 			<span asp-validation-for="Name" class="text-danger"></span>
 		</div>
 
 		<div class="mb-3">
 			<label asp-for="DisplayOrder">Display order</label>
-			<input asp-for="DisplayOrder" class="form-control"/>
+			<input asp-for="DisplayOrder" class="form-control" disabled/>
 			<span asp-validation-for="DisplayOrder" class="text-danger"></span>
 		</div>
 
-		<button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+		<button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
 		<a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to category list</a>
 	</div>
 </form>
 
-@section Scripts {
-@{
-	<partial name = "_ValidationScriptsPartial" />
-}
-}
+
 
 
 
