--- a/PracticeAppWeb/Views/Category/Edit.cshtml
+++ b/PracticeAppWeb/Views/Category/Edit.cshtml
@@ -3,7 +3,7 @@
 <form method="post">
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
-			<h2 class="text-primary">Create category</h2>
+			<h2 class="text-primary">Edit category</h2>
 			<hr />
 		</div>
 		@*<div asp-validation-summary="All"></div>*@
@@ -19,7 +19,7 @@
 			<span asp-validation-for="DisplayOrder" class="text-danger"></span>
 		</div>
 
-		<button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+		<button type="submit" class="btn btn-primary" style="width:150px">Update</button>
 		<a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to category list</a>
 	</div>
 </form>
